@@ -1,5 +1,9 @@
 0.17 - in development
 ---------------------
+ * qdiff:
+   * Fixed problem with invoking external diff from qdiff dialog 
+     when the current directory is not repository root. 
+     (Bug #439084, Alexander Belchenko)
  * qlog:
    * Added "tag revision" action to context menu. (Craig Hewetson)
  * treewidget:
